criação de fluxo entre requisiçoes

--- a/planilha_quantificacao/index.html
+++ b/planilha_quantificacao/index.html
@@ -48,7 +48,7 @@
                 <label for="backbone_secundario">Há backbone secundário?</label>
                 <input type="checkbox" id="backbone_secundario" name="backbone_secundario">
             </div>
-            <input type="submit" value="Calcular" name="Calcular">
+            <input id="Calculo" type="submit" value="Calcular" name="Calcular">
         </article>
     </main>
 
@@ -60,6 +60,7 @@
             <li><a href="https://github.com/sscarlate3">sscarlate3</a></li>
         </ul>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
