--- a/planilha_quantificacao/resultado.html
+++ b/planilha_quantificacao/resultado.html
@@ -29,6 +29,10 @@
                 <label>Medida básica para cálculo dos lances do backbone:</label>
                 <span id="resultado_medida"></span>
             </div>
+            <div class="result-group"></div>
+                <label>Especificação da fibra óptica:</label>
+                <span id="resultado_especificacao"></span>
+            </div>
             <div class="result-group">
                 <label>Característica da fibra óptica:</label>
                 <span id="resultado_caracteristica"></span>
