--- a/planilha_quantificacao/index.html
+++ b/planilha_quantificacao/index.html
@@ -44,7 +44,7 @@
                 <label for="caracteristica">Característica da fibra óptica:</label>
                 <input type="text" id="caracteristica" name="caracteristica">
             </div>
-            <div class="input-group"></div>
+            <div class="input-group">
                 <label for="tipoFibraPredio">Tipo de fibra que chegará:</label>
                 <select id="tipoFibraPredio" name="tipoFibraPredio">
                     <option value="" disabled selected>Selecione </option>
@@ -52,7 +52,7 @@
                     <option value="monomodo">Fibra Monomodo</option>
                 </select>
             </div>
-            <div class="input-group"></div>
+            <div class="input-group">
                 <label for="numeroFibras">Número de fibras que chegarão:</label>
                 <input type="number" id="numeroFibras" name="numeroFibras">
             </div>
