--- a/planilha_quantificacao/index.html
+++ b/planilha_quantificacao/index.html
@@ -38,8 +38,8 @@
                 <label for="especificacao">Especificação da fibra:</label>
                 <select id="especificacao" name="especificacao">
                     <option value="" disabled selected>Selecione </option>
-                    <option value="multimodo">Fibra Multimodo</option>
-                    <option value="monomodo">Fibra Monomodo</option>
+                    <option value="multimodo">multimodo</option>
+                    <option value="monomodo">monomodo</option>
                 </select>
             </div>
             <div class="input-group">
@@ -50,8 +50,8 @@
                 <label for="tipoFibraPredio">Tipo de fibra que chegará:</label>
                 <select id="tipoFibraPredio" name="tipoFibraPredio">
                     <option value="" disabled selected>Selecione </option>
-                    <option value="multimodo">Fibra Multimodo</option>
-                    <option value="monomodo">Fibra Monomodo</option>
+                    <option value="multimodo">multimodo</option>
+                    <option value="monomodo">monomodo</option>
                 </select>
             </div>
             <div class="input-group">
