--- a/planilha_quantificacao/index.html
+++ b/planilha_quantificacao/index.html
@@ -71,7 +71,7 @@
                 <input type="checkbox" id="backbone_secundario" name="backbone_secundario">
             </div>
             <input id="Calculo" type="submit" value="Calcular" name="Calcular">
-            <input id="ExportarExcel" type="submit" value="Exportar para o Excel"  name="ExportarExcel">
+            <!-- <input id="ExportarExcel" type="submit" value="Exportar para o Excel"  name="ExportarExcel"> --> 
 
         </article>
     </main>
