--- a/planilha_quantificacao/resultado.html
+++ b/planilha_quantificacao/resultado.html
@@ -24,6 +24,7 @@
         <tr><th>Backbone Primário</th><td id="backbonePrimario"></td></tr>
         <tr><th>Backbone Secundário</th><td id="backboneSecundario"></td></tr>
         <tr><th>Fibra Óptica (metros)</th><td id="fibraOpticaMetros"></td></tr>
+        <tr><th>Quantidade De Dio's</th><td id="quantidadeDio"></td></tr>
         <tr><th>Bandeja de Emenda</th><td id="bandejaEmenda"></td></tr>
         <tr><th>Terminador Óptico 8 Fibras</th><td id="terminadorOpt8fibras"></td></tr>
         <tr><th>Acoplador Óptico SM</th><td id="qntdAcopladorOptSM"></td></tr>
@@ -34,6 +35,8 @@
         <tr><th>PigTail SM Duplo</th><td id="qntdPigTailSMDuplo"></td></tr>
         <tr><th>PigTail MM Simples</th><td id="qntdPigTailMMSimples"></td></tr>
         <tr><th>PigTail MM Duplo</th><td id="qntdPigTailMMDuplo"></td></tr>
+        <tr><th>Cordão Óptico SM Interno</th><td id="qntdCordaoOptSMInt"></td></tr>
+        <tr><th>Cordão Óptico MM Externo</th><td id="qntdCordaoOpticoMMExt"></td></tr>
     </table>
 </main>
     <script src="resultado.js" ></script>
