--- a/planilha_quantificacao/resultado.html
+++ b/planilha_quantificacao/resultado.html
@@ -16,27 +16,18 @@
     <main>
     <h1>Resultados</h1>
     <table border="52">
-        <tr><th>Número de Pavimentos</th><td id="numeroPavimentos"></td></tr>
-        <tr><th>Pares de Fibras</th><td id="paresFibras"></td></tr>
-        <tr><th>Medida Básica</th><td id="medidaBasica"></td></tr>
-        <tr><th>Característica</th><td id="caracteristica"></td></tr>
-        <tr><th>Backbone por Andar</th><td id="backboneAndar"></td></tr>
-        <tr><th>Backbone Primário</th><td id="backbonePrimario"></td></tr>
-        <tr><th>Backbone Secundário</th><td id="backboneSecundario"></td></tr>
-        <tr><th>Fibra Óptica (metros)</th><td id="fibraOpticaMetros"></td></tr>
-        <tr><th>Quantidade De Dio's</th><td id="quantidadeDio"></td></tr>
-        <tr><th>Bandeja de Emenda</th><td id="bandejaEmenda"></td></tr>
+        <tr><th>Cabo de Fibra Óptica Tight Buffer (FOMMIG) 50 x 125µm</th><td id="fibraOpticaMetros"></td></tr>
+        <tr><th>Chassi DIO (Distribuido Interno Óptico) com 24 portas - 1U - 19"</th><td id="quantidadeDio"></td></tr>
+        <tr><th>Bandeja para emenda de fibra no DIO - (comporta até 12 emendas)</th><td id="bandejaEmenda"></td></tr>
         <tr><th>Terminador Óptico 8 Fibras</th><td id="terminadorOpt8fibras"></td></tr>
-        <tr><th>Acoplador Óptico SM</th><td id="qntdAcopladorOptSM"></td></tr>
-        <tr><th>Cordão Óptico SM Externo</th><td id="qntdCordaoOpticoSMExt"></td></tr>
-        <tr><th>Acoplador Óptico MM</th><td id="qntdAcopladorOptMM"></td></tr>
-        <tr><th>Cordão Óptico MM Interno</th><td id="qntdCordaoOptMMInt"></td></tr>
-        <tr><th>PigTail SM Simples</th><td id="qntdPigTailSMSimples"></td></tr>
-        <tr><th>PigTail SM Duplo</th><td id="qntdPigTailSMDuplo"></td></tr>
-        <tr><th>PigTail MM Simples</th><td id="qntdPigTailMMSimples"></td></tr>
-        <tr><th>PigTail MM Duplo</th><td id="qntdPigTailMMDuplo"></td></tr>
-        <tr><th>Cordão Óptico SM Interno</th><td id="qntdCordaoOptSMInt"></td></tr>
-        <tr><th>Cordão Óptico MM Externo</th><td id="qntdCordaoOpticoMMExt"></td></tr>
+        <tr><th>Acoplador óptico 9 x 125µm - SM - LC - duplo</th><td id="qntdAcopladorOptSM"></td></tr>
+        <tr><th>Acoplador Óptico 50 x 125µm - MM - LC - duplo</th><td id="qntdAcopladorOptMM"></td></tr>
+        <tr><th>Cordão Óptico 9 x 125µm - SM - 3m - duplo - conector LC</th><td id="qntdCordaoOptSM"></td></tr>
+        <tr><th>Cordão Óptico 50 x 125µm - MM - 3m - duplo - conector LC</th><td id="qntdCordaoOptMM"></td></tr>
+        <tr><th>Pig tail 50 x 125µm - SM - 1,5m - simples - conector LC</th><td id="qntdPigTailSMSimples"></td></tr>
+        <tr><th>Pig tail 50 x 125µm - SM - 3,0m - duplo - conector LC</th><td id="qntdPigTailSMDuplo"></td></tr>
+        <tr><th>Pig tail 50 x 125µm - MM - 1,5m - simples - conector LC</th><td id="qntdPigTailMMSimples"></td></tr>
+        <tr><th>Pig tail 50 x 125µm - MM - 3,0m - duplo - conector LC</th><td id="qntdPigTailMMDuplo"></td></tr>
     </table>
 </main>
     <script src="resultado.js" ></script>
