Finalização do projeto

--- a/planilha_quantificacao/index.html
+++ b/planilha_quantificacao/index.html
@@ -42,7 +42,7 @@
                 <input type="number" id="qntd_fibras_disponiveis" name="qntd_fibras_disponiveis">
             </div>
             <div class="input-group">
-                <label for="medida_basica">Medida básica p/ cálculo dos lances do backbone:</label>
+                <label for="medida_basica">Medida básica p/ cálculo dos lances do backbone (pé direito):</label>
                 <input type="text" id="medida_basica" name="medida_basica">
             </div>
             <div class="input-group">
@@ -67,7 +67,7 @@
             <input type="number" id="qntd_predios" name="qntd_predios">
         </div>
         <div class="input-group"></div>
-            <label for="distancia">Distância média entre o prédio principal e o(s) prédio(s) secundário(s):</label>
+            <label for="distancia">Distância média (em metros) entre o prédio principal e o(s) prédio(s) secundário(s):</label>
             <input type="number" id="distancia" name="distancia">
         </div>
         <div class="input-group">
