--- a/planilha_quantificacao/resultado.html
+++ b/planilha_quantificacao/resultado.html
@@ -15,20 +15,26 @@
     </header>
     <main>
     <h1>Resultados</h1>
-    <table border="52">
-        <tr><th>Cabo de Fibra Óptica Tight Buffer (FOMMIG) 50 x 125µm</th><td id="fibraOpticaMetros"></td></tr>
-        <tr><th>Chassi DIO (Distribuido Interno Óptico) com 24 portas - 1U - 19"</th><td id="quantidadeDio"></td></tr>
-        <tr><th>Bandeja para emenda de fibra no DIO - (comporta até 12 emendas)</th><td id="bandejaEmenda"></td></tr>
-        <tr><th>Terminador Óptico 8 Fibras</th><td id="terminadorOpt8fibras"></td></tr>
-        <tr><th>Acoplador óptico 9 x 125µm - SM - LC - duplo</th><td id="qntdAcopladorOptSM"></td></tr>
-        <tr><th>Acoplador Óptico 50 x 125µm - MM - LC - duplo</th><td id="qntdAcopladorOptMM"></td></tr>
-        <tr><th>Cordão Óptico 9 x 125µm - SM - 3m - duplo - conector LC</th><td id="qntdCordaoOptSM"></td></tr>
-        <tr><th>Cordão Óptico 50 x 125µm - MM - 3m - duplo - conector LC</th><td id="qntdCordaoOptMM"></td></tr>
-        <tr><th>Pig tail 50 x 125µm - SM - 1,5m - simples - conector LC</th><td id="qntdPigTailSMSimples"></td></tr>
-        <tr><th>Pig tail 50 x 125µm - SM - 3,0m - duplo - conector LC</th><td id="qntdPigTailSMDuplo"></td></tr>
-        <tr><th>Pig tail 50 x 125µm - MM - 1,5m - simples - conector LC</th><td id="qntdPigTailMMSimples"></td></tr>
-        <tr><th>Pig tail 50 x 125µm - MM - 3,0m - duplo - conector LC</th><td id="qntdPigTailMMDuplo"></td></tr>
+    <table border="25" id="resultados">
+        <tr id="primeiralinha"><th>Especificação</th><td>Qtd.</td><td>Unidade</td></tr>
+        <tr><th>Cabo de Fibra Óptica Tight Buffer (FOMMIG) 50 x 125µm</th><td id="fibraOpticaMetros"></td><td>metros</td></tr>
+        <tr><th>Comprimento de Fibras entre os prédios</th><td id="comprimentoFibra"></td><td>metros</td></tr>
+        <tr><th>Chassi DIO (Distribuido Interno Óptico) com 24 portas - 1U - 19"</th><td id="quantidadeDio"></td><td>und.</td></tr>
+        <tr><th>Bandeja para emenda de fibra no DIO - (comporta até 12 emendas)</th><td id="bandejaEmenda"></td><td>und.</td></tr>
+        <tr><th>Terminador Óptico 8 Fibras</th><td id="terminadorOpt8fibras"></td><td>und.</td></tr>
+        <tr><th>Acoplador óptico 9 x 125µm - SM - LC - duplo</th><td id="qntdAcopladorOptSM"></td><td>und.</td></tr>
+        <tr><th>Acoplador Óptico 50 x 125µm - MM - LC - duplo</th><td id="qntdAcopladorOptMM"></td><td>und.</td></tr>
+        <tr><th>Cordão Óptico 9 x 125µm - SM - 3m - duplo - conector LC</th><td id="qntdCordaoOptSM"></td><td>metro</td></tr>
+        <tr><th>Cordão Óptico 50 x 125µm - MM - 3m - duplo - conector LC</th><td id="qntdCordaoOptMM"></td><td>metro</td></tr>
+        <tr><th>Pig tail 50 x 125µm - SM - 1,5m - simples - conector LC</th><td id="qntdPigTailSMSimples"></td><td>und.</td></tr>
+        <tr><th>Pig tail 50 x 125µm - SM - 3,0m - duplo - conector LC</th><td id="qntdPigTailSMDuplo"></td><td>und.</td></tr>
+        <tr><th>Pig tail 50 x 125µm - MM - 1,5m - simples - conector LC</th><td id="qntdPigTailMMSimples"></td><td>und.</td></tr>
+        <tr><th>Pig tail 50 x 125µm - MM - 3,0m - duplo - conector LC</th><td id="qntdPigTailMMDuplo"></td><td>und.</td></tr>
     </table>
+
+    <article id="retorno">
+        <input id="retorno" type="submit" value="Retornar pra pagina principal" name="retorno">
+    </article>
 </main>
     <script src="resultado.js" ></script>
     
